--- a/oreilly/styles/basic.css
+++ b/oreilly/styles/basic.css
@@ -13,3 +13,9 @@
 .form-success {
     color: green;
 }
+
+/*this is an example, there are others*/
+.email.ng-invalid.ng-invalid-email {
+    background-color: red;
+    color: white;
+}
